<resources>
    <string name="app_name">Piratefy</string>
    <string name="artista">Nome do Artista/Banda</string>
    <string name="musica">Nome da musica</string>
    <string name="salvar">SALVAR</string>
    <string name="selecione_uma_m_sica">SELECIONE UMA MÚSICA</string>
    <string name="arquivo_selecionado">Arquivo Selecionado</string>
    <string name="sem_musicas">Não encontramos nenhuma música</string>
    <string name="pesquisa_hint">Pesquise uma música...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario_sem_musicas">Você ainda não enviou nenhuma música</string>
    <string name="loading">Loading</string>
    <string name="deletar">Deletar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="total_acervo">Contamos com um acervo de 1000 músicas</string>
    <string name="sobre_estatisticas">Veja nossas estatísticas</string>
    <string name="contato">Não entre em contato conosco</string>
</resources>
