<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateMusicActivity">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"></include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutArtista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/artista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artista"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutMusica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="40">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/musica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/musica"

            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/salvar"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:height="70dp"
        android:layout_below="@id/layoutFile" />

</LinearLayout>